tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/jwt-claim-route/unmatched_with_no_request_authentication:404/to_b/_test_context/VirtualService-Gateway.1175526504.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-20468
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-20468
spec:
  gateways:
  - gateway
  hosts:
  - foo.bar
  http:
  - match:
    - headers:
        '@request.auth.claims.nested.key1':
          exact: valueA
      uri:
        prefix: /
    route:
    - destination:
        host: b
